--- a/index.html
+++ b/index.html
@@ -3,21 +3,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cantinho BRasileiro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
+
+     <!--Bootstrap Icons-->
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <nav class="navbar bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">
-                <img src="./img/Logo.png" alt="Logo" width="30" height="auto" class="d-inline-block align-text-top">
-                Cantinho BRasileiro
-              </a>
-            </div>
-          </nav>
-    </header>
+  <!--Navbar-->
+  <nav class="navbar navbar-expand-lg border-bottom border-warning">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link nav-hover h6 text-dark" href="index.html">Sobre Nós</a>
+          </li>
+          <li class="nav-item ms-3 me-3 dropdown">
+            <a class="nav-link nav-hover h6 text-dark" href="#"
+                role="button">Doces</a>
+            <ul class="dropdown-menu border-warning">
+                <li><a class="dropdown-item" href="pastadeslaoque.html">Salada de Agrião</a></li>
+                <li><a class="dropdown-item" href="pastadeslaoque.html">Viinagrete</a></li>
+                <li><a class="dropdown-item" href="pastadeslaoque.html">Aioli</a></li>
+                <li><a class="dropdown-item" href="pastadeslaoque.html">Molho sla</a></li>
+                <li>
+                    <hr class="dropdown-divider border-warning">
+                </li>
+                <li><a class="dropdown-item" href="produtos.html">Ver tudo</a></li>
+            </ul>
+        </li>
+        </ul>
+        <li class="nav-item ms-3 me-3 dropdown">
+          <a class="nav-link nav-hover h6 text-dark" href="#"
+              role="button">Salgados</a>
+          <ul class="dropdown-menu border-warning">
+              <li><a class="dropdown-item" href="pastadeslaoque.html">Salada de Agrião</a></li>
+              <li><a class="dropdown-item" href="pastadeslaoque.html">Viinagrete</a></li>
+              <li><a class="dropdown-item" href="pastadeslaoque.html">Aioli</a></li>
+              <li><a class="dropdown-item" href="pastadeslaoque.html">Molho sla</a></li>
+              <li>
+                  <hr class="dropdown-divider border-warning">
+              </li>
+              <li><a class="dropdown-item" href="produtos.html">Ver tudo</a></li>
+          </ul>
+      </li>
+      </ul>
+        <a class="navbar-brand mx-4" href="index.html"></a>
+        <img src="img/logo.png" alt="Cantinho" width="90" height="80">
+
+        <li class="nav-item ms-3 me-3 dropdown">
+          <a class="nav-link nav-hover h6 text-dark" href="#"
+              role="button">Bolos e sobremesas</a>
+          <ul class="dropdown-menu border-warning">
+              <li><a class="dropdown-item" href="pastadeslaoque.html">Salada de Agrião</a></li>
+              <li><a class="dropdown-item" href="pastadeslaoque.html">Viinagrete</a></li>
+              <li><a class="dropdown-item" href="pastadeslaoque.html">Aioli</a></li>
+              <li><a class="dropdown-item" href="pastadeslaoque.html">Molho sla</a></li>
+              <li>
+                  <hr class="dropdown-divider border-warning">
+              </li>
+              <li><a class="dropdown-item" href="produtos.html">Ver tudo</a></li>
+          </ul>
+      </li>
+      </ul>
+
+      <li class="nav-item ms-3 me-3 dropdown">
+        <a class="nav-link nav-hover h6 text-dark" href="#"
+            role="button">Saladas e molhos</a>
+        <ul class="dropdown-menu border-warning">
+            <li><a class="dropdown-item" href="pastadeslaoque.html">Salada de Agrião</a></li>
+            <li><a class="dropdown-item" href="pastadeslaoque.html">Viinagrete</a></li>
+            <li><a class="dropdown-item" href="pastadeslaoque.html">Aioli</a></li>
+            <li><a class="dropdown-item" href="pastadeslaoque.html">Molho sla</a></li>
+            <li>
+                <hr class="dropdown-divider border-warning">
+            </li>
+            <li><a class="dropdown-item" href="produtos.html">Ver tudo</a></li>
+        </ul>
+    </li>
+    </ul>
+
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-warning" type="submit">Search</button>
+        </form>
+      </div>
+
+    </div>
+  </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
