--- a/index.html
+++ b/index.html
@@ -1,100 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cantinho BRasileiro</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
 
-     <!--Bootstrap Icons-->
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cantinho BRasileiro</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="./style.css">
+
+  <!--Bootstrap Icons-->
   <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
-  <!--Navbar-->
-  <nav class="navbar navbar-expand-lg border-bottom border-warning">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link nav-hover h6 text-dark" href="index.html">Sobre Nós</a>
-          </li>
-          <li class="nav-item ms-3 me-3 dropdown">
-            <a class="nav-link nav-hover h6 text-dark" href="#"
-                role="button">Doces</a>
-            <ul class="dropdown-menu border-warning">
+
+  <header>
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg border-bottom border-warning">
+      <img src="img/logo.png" alt="Cantinho" width="90" height="80">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+
+            <li class="nav-item">
+              <div class="container">
+                <a class="nav-link nav-hover h6 text-dark" href="quemsomos.html">Quem somos</a>
+              </div>
+
+            </li>
+
+
+
+
+            <li class="nav-item ms-3 me-3 dropdown">
+              <a class="nav-link nav-hover h6 text-dark" href="doces.html">Doces</a>
+              <ul class="dropdown-menu border-warning">
+                <li><a class="dropdown-item" href="pastadeslaoque.html">Salada de Agrião</a></li>
+                <li><a class="dropdown-item" href="pastadeslaoque.html">Viinagrete</a></li>
+                <li><a class="dropdown-item" href="pastadeslaoque.html">Aioli</a></li>
+                <li><a class="dropdown-item" href="pastadeslaoque.html">Molho sla</a></li>
+
+                <li>
+                  <hr class="dropdown-divider border-warning">
+                </li>
+
+                <li><a class="dropdown-item" href="produtos.html">Ver tudo</a></li>
+              </ul>
+            </li>
+
+            <li class="nav-item ms-3 me-3 dropdown">
+
+              <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Salgados</a>
+              <ul class="dropdown-menu border-warning">
+                <li><a class="dropdown-item" href="pastadeslaoque.html">Salada de Agrião</a></li>
+                <li><a class="dropdown-item" href="pastadeslaoque.html">Vinagrete</a></li>
+                <li><a class="dropdown-item" href="pastadeslaoque.html">Aioli</a></li>
+                <li><a class="dropdown-item" href="pastadeslaoque.html">Molho sla</a></li>
+
+                <li>
+                  <hr class="dropdown-divider border-warning">
+                </li>
+                <li><a class="dropdown-item" href="produtos.html">Ver tudo</a></li>
+              </ul>
+
+            </li>
+            <li class="nav-item ms-3 me-3 dropdown">
+              <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Bolos e sobremesas</a>
+              <ul class="dropdown-menu border-warning">
                 <li><a class="dropdown-item" href="pastadeslaoque.html">Salada de Agrião</a></li>
                 <li><a class="dropdown-item" href="pastadeslaoque.html">Viinagrete</a></li>
                 <li><a class="dropdown-item" href="pastadeslaoque.html">Aioli</a></li>
                 <li><a class="dropdown-item" href="pastadeslaoque.html">Molho sla</a></li>
                 <li>
-                    <hr class="dropdown-divider border-warning">
+                  <hr class="dropdown-divider border-warning">
                 </li>
                 <li><a class="dropdown-item" href="produtos.html">Ver tudo</a></li>
-            </ul>
-        </li>
-        </ul>
-        <li class="nav-item ms-3 me-3 dropdown">
-          <a class="nav-link nav-hover h6 text-dark" href="#"
-              role="button">Salgados</a>
-          <ul class="dropdown-menu border-warning">
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Salada de Agrião</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Viinagrete</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Aioli</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Molho sla</a></li>
-              <li>
-                  <hr class="dropdown-divider border-warning">
-              </li>
-              <li><a class="dropdown-item" href="produtos.html">Ver tudo</a></li>
-          </ul>
-      </li>
-      </ul>
-        <a class="navbar-brand mx-4" href="index.html"></a>
-        <img src="img/logo.png" alt="Cantinho" width="90" height="80">
-
-        <li class="nav-item ms-3 me-3 dropdown">
-          <a class="nav-link nav-hover h6 text-dark" href="#"
-              role="button">Bolos e sobremesas</a>
-          <ul class="dropdown-menu border-warning">
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Salada de Agrião</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Viinagrete</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Aioli</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Molho sla</a></li>
-              <li>
-                  <hr class="dropdown-divider border-warning">
-              </li>
-              <li><a class="dropdown-item" href="produtos.html">Ver tudo</a></li>
-          </ul>
-      </li>
-      </ul>
-
-      <li class="nav-item ms-3 me-3 dropdown">
-        <a class="nav-link nav-hover h6 text-dark" href="#"
-            role="button">Saladas e molhos</a>
-        <ul class="dropdown-menu border-warning">
-            <li><a class="dropdown-item" href="pastadeslaoque.html">Salada de Agrião</a></li>
-            <li><a class="dropdown-item" href="pastadeslaoque.html">Viinagrete</a></li>
-            <li><a class="dropdown-item" href="pastadeslaoque.html">Aioli</a></li>
-            <li><a class="dropdown-item" href="pastadeslaoque.html">Molho sla</a></li>
-            <li>
-                <hr class="dropdown-divider border-warning">
+              </ul>
             </li>
-            <li><a class="dropdown-item" href="produtos.html">Ver tudo</a></li>
-        </ul>
-    </li>
-    </ul>
 
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-warning" type="submit">Search</button>
-        </form>
+            <li class="nav-item ms-3 me-3 dropdown">
+              <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Saladas e molhos</a>
+              <ul class="dropdown-menu border-warning">
+                <li><a class="dropdown-item" href="pastadeslaoque.html">Salada de Agrião</a></li>
+                <li><a class="dropdown-item" href="pastadeslaoque.html">Viinagrete</a></li>
+                <li><a class="dropdown-item" href="pastadeslaoque.html">Aioli</a></li>
+                <li><a class="dropdown-item" href="pastadeslaoque.html">Molho sla</a></li>
+                <li>
+                  <hr class="dropdown-divider border-warning">
+                </li>
+                <li><a class="dropdown-item" href="produtos.html">Ver tudo</a></li>
+              </ul>
+            </li>
+
+          </ul>
+
+
+          <a class="navbar-brand mx-4" href="index.html"></a>
+
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-warning" type="submit">Search</button>
+          </form>
+        </div>
+
       </div>
+    </nav>
 
+  </header>
+  <main>
+    <div class="container">
+      <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/home.png" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/PAO-DE-QUEIJO-18.2-1140x694.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/brigadeirobeijinho.webp" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
-  </nav>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </main>
+
+
+  <footer>
+
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
+
 </html>
