adicionando quem somos

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
         <div class="col-lg-6">
             <div class="container p-5">
-                <h1>No dê um oi!</h1>
+                <h1>Nos dê um oi!</h1>
                 <p>olaCantinho@gmail.com.br</p>
             </div>
         </div>
