--- a/index.html
+++ b/index.html
@@ -136,38 +136,38 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/Sudeste-Carrssel.png" class="d-block w-100" alt="...">
+            <img src="img/Carrossel-Sul.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h3>Região Sul - Chimarrão</h3>
+              <h4>Símbolo da amizade, o chimarrão é compartilhado entre amigos há gerações!</h4>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/PAO-DE-QUEIJO-18.2-1140x694.jpg" class="d-block w-100" alt="...">
+            <img src="img/Carrossel-Sudeste.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <h3>Região Sudeste - Pão de Queijo</h3>
+              <h4>A iguaria mineira que nasceu nos fornos coloniais e conquistou o Brasil!</h4>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/brigadeirobeijinho.webp" class="d-block w-100" alt="...">
+            <img src="img/Carrossel-Centro Oeste.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h3>Região Centro Oeste - Arroz Doce</h3>
+              <h4>Doce tradicional com raízes indígenas e europeias, é presença certa nas festas juninas!</h4>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/brigadeirobeijinho.webp" class="d-block w-100" alt="...">
+            <img src="img/carrossel-Norte.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h3>Região Norte - Tacacá</h3>
+              <h4>Caldo quente e saboroso, o tacacá é feito com tucupi e jambu, que ‘anestesia’ a língua!</h4>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/brigadeirobeijinho.webp" class="d-block w-100" alt="...">
+            <img src="img/Carrossel-Nordeste.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h3>Região Nordeste - Acarajé</h3>
+              <h4>Do sagrado ao popular, o acarajé é patrimônio cultural e delícia de origem africana!</h4>
             </div>
           </div>
         </div>
