alterando quem somos

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -130,18 +130,20 @@
       <h1 class="titulo"> Conheça a Gente!</h1>
       </p>
       <div class="container">
-        <p><h4>Somos um site dedicado a celebrar e comparttilhar a rica e diversificada culinária brasileira, trazendo à
-          tona os sabores e tradições de todas as regiões do país. Aqui, você encontra receitas autênticas, dicas de
-          preparo e histórias sobre pratos típicos que fazem parte da identidade gastronômica do Brasil. Da Feijoada
-          carioca às moquecas baianas, passando pelo clássico arroz com pequi do Centro-Oeste, a saborosa carne de sol
-          com macaxeira do Nordeste e o arroz de carreteiro do Sul, nossa missão é resgatar e divulgar as iguarias que
-          encantam e alimentam as pessoas por todo o território nacional e internacional.</h4></p>
+        <p>
+        <h4>Somos um site dedicado a celebrar e compartilhar a rica e diversificada culinária brasileira, trazendo à
+          tona os sabores e tradições de todas as regiões do país. Aqui, você encontra receitas autênticas. Do Pão de Queijo do Sudeste
+          ao acarajé do Nordeste, passando pelo clássico arroz doce do Centro-Oeste, ao saboroso chimarrão do Sul e o tacaca do Norte, nossa missão é resgatar e divulgar as iguarias que
+          encantam e alimentam as pessoas por todo o território nacional e internacional.</h4>
+        </p>
 
 
-          <p><h4>Com o intuito de aproximar todos dos sabores regionais, nosso site é um espaço onde qualquer pessoa, seja
+        <p>
+        <h4>Com o intuito de aproximar todos dos sabores regionais, nosso site é um espaço onde qualquer pessoa, seja
           iniciante ou cozinheiro experiente, pode aprender a preparar pratos que vão de simples delícias do cotidiano a
-          receitas sofisticadas e recheadas de história. Junte-se a nós nessa jornada para descobrir, criar e se
-          apaixonar pela culinária que faz do Brasil um verdadeiro festim de sabores!</h4></p>
+          receitas sofisticadas. Junte-se a nós nessa jornada para descobrir, criar e se
+          apaixonar pela culinária que faz do Brasil um verdadeiro festim de sabores!</h4>
+        </p>
       </div>
     </div>
   </main>
