--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Carnes</a>
               <ul class="dropdown-menu border-warning">
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Sul</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Sudeste</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Centro-Oeste</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Nordeste</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Norte</a></li>
+                <li><a class="dropdown-item" href="carnes-sul.html">Sul</a></li>
+                <li><a class="dropdown-item" href="carnes/carnes-sudeste.html">Sudeste</a></li>
+                <li><a class="dropdown-item" href="carnes-centro-oeste.html">Centro-Oeste</a></li>
+                <li><a class="dropdown-item" href="carnes-nordeste.html">Nordeste</a></li>
+                <li><a class="dropdown-item" href="carnes-norte.html">Norte</a></li>
 
                 <li>
                   <hr class="dropdown-divider border-warning">
