adicionando cardápio cards

--- a/carnes-sudeste.html
+++ b/carnes-sudeste.html
@@ -17,7 +17,6 @@
   <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
-
 <body>
 
   <header>
@@ -96,7 +95,7 @@
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Carnes</a>
               <ul class="dropdown-menu border-warning">
                 <li><a class="dropdown-item" href="carnes-sul.html">Sul</a></li>
-                <li><a class="dropdown-item" href="carnes/carnes-sudeste.html">Sudeste</a></li>
+                <li><a class="dropdown-item" href="carnes-sudeste.html">Sudeste</a></li>
                 <li><a class="dropdown-item" href="carnes-centro-oeste.html">Centro-Oeste</a></li>
                 <li><a class="dropdown-item" href="carnes-nordeste.html">Nordeste</a></li>
                 <li><a class="dropdown-item" href="carnes-norte.html">Norte</a></li>
@@ -126,67 +125,28 @@
 
           </ul>
 
-          <!-- Logo como um botão simples (BUGADO) -->
-          <li class="nav-item ms-3">
-            <a class="nav-link p-0" href="quemsomos.html">
-              <img src="img/receitas.fav.png" alt="Livro de Receitas" width="50" height="50" class="d-block">
-            </a>
-          </li>
-
-        </div>
-    </nav>
-  </header>
+          <a class="navbar-brand mx-4 tooltip-recado" href="index.html" data-recado="Voltar à página inicial">
+            <!--Logo livro de receitas-->
+            <img src="img/receitas.fav.png" alt="Cantinho" width="50" height="50">
+          </a>
 
 
-
-  <footer>
-    <!-- Seção de Redes Sociais -->
-    <div class="row align-items-center">
-      <div class="col-lg-6">
-        <div class="container p-5">
-          <h2>Siga-nos nas redes sociais!</h2>
-          <div class="d-flex align-items-center mb-3">
-            <img src="img/facebook.footer.png" alt="CantinhoBrasileiroOficial" width="60" height="30">
-            <p class="ms-2 mb-0">CantinhoBrasileiroOficial</p>
-          </div>
-
-          <div class="d-flex align-items-center mb-3">
-            <img src="img/instagram.footer.png" alt="CantinhoBR_oficial" width="60" height="30">
-            <p class="ms-2 mb-0">CantinhoBR_oficial</p>
-          </div>
-
-          <div class="d-flex align-items-center mb-3">
-            <img src="img/youtube.footer.png" alt="CantinhoBrasileiro" width="60" height="30">
-            <p class="ms-2 mb-0">CantinhoBrasileiro</p>
-          </div>
-
-          <div class="d-flex align-items-center">
-            <img src="img/email.footer.png" alt="ola@Cantinho.com" width="60" height="30">
-            <p class="ms-2 mb-0">ola@Cantinho.com</p>
-          </div>
         </div>
       </div>
-    </div>
+    </nav>
+  </header>
+  <main>
 
-
-    <!-- Assinatura de Newsletter -->
-    <div class="newsletter text-center p-4">
-      <h4>Inscreva-se para receber nossas novidades!</h4>
-      <form action="#">
-        <input type="email" placeholder="Digite seu e-mail" required>
-        <button type="submit" class="btn btn-success">Assinar</button>
-      </form>
-    </div>
-    <p class="text-center">© Cantinho Brasileiro 2024</p>
+  </main>
+  <footer>
+    <p>© Cantinho BRasileiro 2024</p>
   </footer>
-
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-
-
 </body>
+
 
 </html>
