--- a/carnes-sul.html
+++ b/carnes-sul.html
@@ -131,9 +131,8 @@
                         <img src="img/receitas.fav.png" alt="Cantinho" width="50" height="50">
                     </a>
 
-                    </li>
-
                 </div>
+            </div>    
         </nav>
     </header>
     <main>
