--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Carnes</a>
               <ul class="dropdown-menu border-warning">
                 <li><a class="dropdown-item" href="carnes-sul.html">Sul</a></li>
-                <li><a class="dropdown-item" href="carnes/carnes-sudeste.html">Sudeste</a></li>
+                <li><a class="dropdown-item" href="carnes-sudeste.html">Sudeste</a></li>
                 <li><a class="dropdown-item" href="carnes-centro-oeste.html">Centro-Oeste</a></li>
                 <li><a class="dropdown-item" href="carnes-nordeste.html">Nordeste</a></li>
                 <li><a class="dropdown-item" href="carnes-norte.html">Norte</a></li>
