Sub páginas adicionadas

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -39,11 +39,11 @@
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="doces.html">Doces</a>
               <ul class="dropdown-menu border-warning">
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Sul</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Sudeste</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Centro-Oeste</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Nordeste</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Norte</a></li>
+                <li><a class="dropdown-item" href="Doces/doces-sul.html">Sul</a></li>
+                <li><a class="dropdown-item" href="Doces/doces-sudeste.html">Sudeste</a></li>
+                <li><a class="dropdown-item" href="Doces/doces-centro-oeste.html">Centro-Oeste</a></li>
+                <li><a class="dropdown-item" href="Doces/doces-Nordeste.html">Nordeste</a></li>
+                <li><a class="dropdown-item" href="Doces/doces-Norte.html">Norte</a></li>
 
                 <li>
                   <hr class="dropdown-divider border-warning">
