--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="doces.html">Doces</a>
               <ul class="dropdown-menu border-warning">
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Sul</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Sudeste</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Centro-Oeste</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Nordeste</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Norte</a></li>
+                <li><a class="dropdown-item" href="Doces/doces-sul.html">Sul</a></li>
+                <li><a class="dropdown-item" href="Doces/doces-sudeste.html">Sudeste</a></li>
+                <li><a class="dropdown-item" href="Doces/doces-centro-oeste.html">Centro-Oeste</a></li>
+                <li><a class="dropdown-item" href="Doces/doces-Nordeste.html">Nordeste</a></li>
+                <li><a class="dropdown-item" href="Doces/doces-Norte.html">Norte</a></li>
 
                 <li>
                   <hr class="dropdown-divider border-warning">
@@ -55,11 +55,11 @@
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Salgados</a>
               <ul class="dropdown-menu border-warning">
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Sul</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Sudeste</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Centro-Oeste</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Nordeste</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Norte</a></li>
+                <li><a class="dropdown-item" href="Salgados/salgados-sul.html">Sul</a></li>
+                <li><a class="dropdown-item" href="Salgados/salgados-sudeste.html">Sudeste</a></li>
+                <li><a class="dropdown-item" href="Salgados/salgados-centro-oeste.html">Centro-Oeste</a></li>
+                <li><a class="dropdown-item" href="Salgados/salgados-nordeste.html">Nordeste</a></li>
+                <li><a class="dropdown-item" href="Salgados/salgados-norte.html">Norte</a></li>
 
                 <li>
                   <hr class="dropdown-divider border-warning">
@@ -77,11 +77,11 @@
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Bebidas</a>
               <ul class="dropdown-menu border-warning">
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Sul</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Sudeste</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Centro-Oeste</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Nordeste</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Norte</a></li>
+                <li><a class="dropdown-item" href="Bebidas/bebidas-sul.html">Sul</a></li>
+                <li><a class="dropdown-item" href="Bebidas/bebidas-sudeste.html">Sudeste</a></li>
+                <li><a class="dropdown-item" href="Bebidas/bebidas-centro-oeste.html">Centro-Oeste</a></li>
+                <li><a class="dropdown-item" href="Bebidas/bebidas-nordeste.html">Nordeste</a></li>
+                <li><a class="dropdown-item" href="Bebidas/bebidas-norte.html">Norte</a></li>
 
                 <li>
                   <hr class="dropdown-divider border-warning">
@@ -93,11 +93,11 @@
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Carnes</a>
               <ul class="dropdown-menu border-warning">
-                <li><a class="dropdown-item" href="carnes-sul.html">Sul</a></li>
-                <li><a class="dropdown-item" href="carnes-sudeste.html">Sudeste</a></li>
-                <li><a class="dropdown-item" href="carnes-centro-oeste.html">Centro-Oeste</a></li>
-                <li><a class="dropdown-item" href="carnes-nordeste.html">Nordeste</a></li>
-                <li><a class="dropdown-item" href="carnes-norte.html">Norte</a></li>
+                <li><a class="dropdown-item" href="Carnes/carnes-sul.html">Sul</a></li>
+                <li><a class="dropdown-item" href="Carnes/carnes-sudeste.html">Sudeste</a></li>
+                <li><a class="dropdown-item" href="Carnes/carnes-centro-oeste.html">Centro-Oeste</a></li>
+                <li><a class="dropdown-item" href="Carnes/carnes-nordeste.html">Nordeste</a></li>
+                <li><a class="dropdown-item" href="Carnes/carnes-norte.html">Norte</a></li>
 
                 <li>
                   <hr class="dropdown-divider border-warning">
@@ -109,11 +109,11 @@
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Saladas e molhos</a>
               <ul class="dropdown-menu border-warning">
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Sul</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Sudeste</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Centro-Oeste</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Nordeste</a></li>
-                <li><a class="dropdown-item" href="pastadeslaoque.html">Norte</a></li>
+                <li><a class="dropdown-item" href="Sal-Mol/s.m-sul.html">Sul</a></li>
+                <li><a class="dropdown-item" href="Sal-Mol/s.m-sudeste.html">Sudeste</a></li>
+                <li><a class="dropdown-item" href="Sal-Mol/s.m-centro-oeste.html">Centro-Oeste</a></li>
+                <li><a class="dropdown-item" href="Sal-Mol/s.m-nordeste.html">Nordeste</a></li>
+                <li><a class="dropdown-item" href="Sal-Mol/s.m-norte.html">Norte</a></li>
 
                 <li>
                   <hr class="dropdown-divider border-warning">
@@ -121,7 +121,6 @@
                 <li><a class="dropdown-item" href="produtos.html">Ver tudo</a></li>
               </ul>
             </li>
-
           </ul>
         
         <!-- Logo como um botão simples (BUGADO) -->
