--- a/Salgados/salgados-sudeste.html
+++ b/Salgados/salgados-sudeste.html
@@ -37,13 +37,13 @@
             </li>
 
             <li class="nav-item ms-3 me-3 dropdown">
-              <a class="nav-link nav-hover h6 text-dark" href="#">Doces</a>
+              <a class="nav-link nav-hover h6 text-dark" href="doces.html">Doces</a>
               <ul class="dropdown-menu border-warning">
-                <li><a class="dropdown-item" href="Doces/doces-sul.html">Sul</a></li>
-                <li><a class="dropdown-item" href="Doces/doces-sudeste.html">Sudeste</a></li>
-                <li><a class="dropdown-item" href="Doces/doces-centro-oeste.html">Centro-Oeste</a></li>
-                <li><a class="dropdown-item" href="Doces/doces-Nordeste.html">Nordeste</a></li>
-                <li><a class="dropdown-item" href="Doces/doces-Norte.html">Norte</a></li>
+                <li><a class="dropdown-item" href="../Doces/doces-sul.html">Sul</a></li>
+                <li><a class="dropdown-item" href="../Doces/doces-sudeste.html">Sudeste</a></li>
+                <li><a class="dropdown-item" href="../Doces/doces-centro-oeste.html">Centro-Oeste</a></li>
+                <li><a class="dropdown-item" href="../Doces/doces-Nordeste.html">Nordeste</a></li>
+                <li><a class="dropdown-item" href="../Doces/doces-Norte.html">Norte</a></li>
 
                 <li>
                   <hr class="dropdown-divider border-warning">
@@ -56,11 +56,11 @@
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Salgados</a>
               <ul class="dropdown-menu border-warning">
-                <li><a class="dropdown-item" href="Salgados/salgados-sul.html">Sul</a></li>
-                <li><a class="dropdown-item" href="Salgados/salgados-sudeste.html">Sudeste</a></li>
-                <li><a class="dropdown-item" href="Salgados/salgados-centro-oeste.html">Centro-Oeste</a></li>
-                <li><a class="dropdown-item" href="Salgados/salgados-nordeste.html">Nordeste</a></li>
-                <li><a class="dropdown-item" href="Salgados/salgados-norte.html">Norte</a></li>
+                <li><a class="dropdown-item" href="../Salgados/salgados-sul.html">Sul</a></li>
+                <li><a class="dropdown-item" href="../Salgados/salgados-sudeste.html">Sudeste</a></li>
+                <li><a class="dropdown-item" href="../Salgados/salgados-centro-oeste.html">Centro-Oeste</a></li>
+                <li><a class="dropdown-item" href="../Salgados/salgados-nordeste.html">Nordeste</a></li>
+                <li><a class="dropdown-item" href="../Salgados/salgados-norte.html">Norte</a></li>
 
                 <li>
                   <hr class="dropdown-divider border-warning">
@@ -70,19 +70,19 @@
             </li>
 
             <li class="nav-item mx-auto">
-              <a class="navbar-brand" href="index.html">
-            <a class="navbar-brand mx-4" href="index.html"> <!--Logo navbar-->
-              <img src="img/logo.png" alt="Cantinho" width="95" height="95">
+              <a class="navbar-brand" href="../index.html">
+            <a class="navbar-brand mx-4" href="../index.html"> <!--Logo navbar-->
+              <img src="../img/logo.png" alt="Cantinho" width="95" height="95">
           </a>
 
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Bebidas</a>
               <ul class="dropdown-menu border-warning">
-                <li><a class="dropdown-item" href="Bebidas/bebidas-sul.html">Sul</a></li>
-                <li><a class="dropdown-item" href="Bebidas/bebidas-sudeste.html">Sudeste</a></li>
-                <li><a class="dropdown-item" href="Bebidas/bebidas-centro-oeste.html">Centro-Oeste</a></li>
-                <li><a class="dropdown-item" href="Bebidas/bebidas-nordeste.html">Nordeste</a></li>
-                <li><a class="dropdown-item" href="Bebidas/bebidas-norte.html">Norte</a></li>
+                <li><a class="dropdown-item" href="../Bebidas/bebidas-sul.html">Sul</a></li>
+                <li><a class="dropdown-item" href="../Bebidas/bebidas-sudeste.html">Sudeste</a></li>
+                <li><a class="dropdown-item" href="../Bebidas/bebidas-centro-oeste.html">Centro-Oeste</a></li>
+                <li><a class="dropdown-item" href="../Bebidas/bebidas-nordeste.html">Nordeste</a></li>
+                <li><a class="dropdown-item" href="../Bebidas/bebidas-norte.html">Norte</a></li>
 
                 <li>
                   <hr class="dropdown-divider border-warning">
@@ -94,11 +94,11 @@
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Carnes</a>
               <ul class="dropdown-menu border-warning">
-                <li><a class="dropdown-item" href="Carnes/carnes-sul.html">Sul</a></li>
-                <li><a class="dropdown-item" href="Carnes/carnes-sudeste.html">Sudeste</a></li>
-                <li><a class="dropdown-item" href="Carnes/carnes-centro-oeste.html">Centro-Oeste</a></li>
-                <li><a class="dropdown-item" href="Carnes/carnes-nordeste.html">Nordeste</a></li>
-                <li><a class="dropdown-item" href="Carnes/carnes-norte.html">Norte</a></li>
+                <li><a class="dropdown-item" href="../Carnes/carnes-sul.html">Sul</a></li>
+                <li><a class="dropdown-item" href="../Carnes/carnes-sudeste.html">Sudeste</a></li>
+                <li><a class="dropdown-item" href="../Carnes/carnes-centro-oeste.html">Centro-Oeste</a></li>
+                <li><a class="dropdown-item" href="../Carnes/carnes-nordeste.html">Nordeste</a></li>
+                <li><a class="dropdown-item" href="../Carnes/carnes-norte.html">Norte</a></li>
 
                 <li>
                   <hr class="dropdown-divider border-warning">
@@ -110,11 +110,11 @@
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Saladas e molhos</a>
               <ul class="dropdown-menu border-warning">
-                <li><a class="dropdown-item" href="Sal-Mol/s.m-sul.html">Sul</a></li>
-                <li><a class="dropdown-item" href="Sal-Mol/s.m-sudeste.html">Sudeste</a></li>
-                <li><a class="dropdown-item" href="Sal-Mol/s.m-centro-oeste.html">Centro-Oeste</a></li>
-                <li><a class="dropdown-item" href="Sal-Mol/s.m-nordeste.html">Nordeste</a></li>
-                <li><a class="dropdown-item" href="Sal-Mol/s.m-norte.html">Norte</a></li>
+                <li><a class="dropdown-item" href="../Sal-Mol/s.m-sul.html">Sul</a></li>
+                <li><a class="dropdown-item" href="../Sal-Mol/s.m-sudeste.html">Sudeste</a></li>
+                <li><a class="dropdown-item" href="../Sal-Mol/s.m-centro-oeste.html">Centro-Oeste</a></li>
+                <li><a class="dropdown-item" href="../Sal-Mol/s.m-nordeste.html">Nordeste</a></li>
+                <li><a class="dropdown-item" href="../Sal-Mol/s.m-norte.html">Norte</a></li>
 
                 <li>
                   <hr class="dropdown-divider border-warning">
@@ -126,8 +126,8 @@
         
         <!-- Logo como um botão simples (BUGADO) -->
       <li class="nav-item ms-3">
-        <a class="nav-link p-0" href="quemsomos.html">
-          <img src="img/receitas.fav.png" alt="Livro de Receitas" width="50" height="50" class="d-block">
+        <a class="nav-link p-0" href="../quemsomos.html">
+          <img src="../img/receitas.fav.png" alt="Livro de Receitas" width="50" height="50" class="d-block">
         </a>
       </li>
 
