--- a/Carnes/carnes-sudeste.html
+++ b/Carnes/carnes-sudeste.html
@@ -2,25 +2,25 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cantinho BRasileiro</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cantinho BRasileiro - Carnes do Sudeste</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../style.css">
 
-  <!-- Link para Font Awesome (CDN) -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMWx/w17N1yFCO7xzBf6VobH6lcxXoY8s+g8V4R" crossorigin="anonymous">
+    <!-- Link para Font Awesome (CDN) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMWx/w17N1yFCO7xzBf6VobH6lcxXoY8s+g8V4R" crossorigin="anonymous">
 
-  <!--Bootstrap Icons-->
-  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <!--Bootstrap Icons-->
+    <link rel="icon" href="..img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
 
-  <header>
-    <!--NAVBAR-->
+    <header>
+        <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg border-bottom border-warning">
       <div class="container">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -39,11 +39,11 @@
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="doces.html">Doces</a>
               <ul class="dropdown-menu border-warning">
-                <li><a class="dropdown-item" href="Doces/doces-sul.html">Sul</a></li>
-                <li><a class="dropdown-item" href="Doces/doces-sudeste.html">Sudeste</a></li>
-                <li><a class="dropdown-item" href="Doces/doces-centro-oeste.html">Centro-Oeste</a></li>
-                <li><a class="dropdown-item" href="Doces/doces-Nordeste.html">Nordeste</a></li>
-                <li><a class="dropdown-item" href="Doces/doces-Norte.html">Norte</a></li>
+                <li><a class="dropdown-item" href="../Doces/doces-sul.html">Sul</a></li>
+                <li><a class="dropdown-item" href="../Doces/doces-sudeste.html">Sudeste</a></li>
+                <li><a class="dropdown-item" href="../Doces/doces-centro-oeste.html">Centro-Oeste</a></li>
+                <li><a class="dropdown-item" href="../Doces/doces-Nordeste.html">Nordeste</a></li>
+                <li><a class="dropdown-item" href="../Doces/doces-Norte.html">Norte</a></li>
 
                 <li>
                   <hr class="dropdown-divider border-warning">
@@ -56,11 +56,11 @@
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Salgados</a>
               <ul class="dropdown-menu border-warning">
-                <li><a class="dropdown-item" href="Salgados/salgados-sul.html">Sul</a></li>
-                <li><a class="dropdown-item" href="Salgados/salgados-sudeste.html">Sudeste</a></li>
-                <li><a class="dropdown-item" href="Salgados/salgados-centro-oeste.html">Centro-Oeste</a></li>
-                <li><a class="dropdown-item" href="Salgados/salgados-nordeste.html">Nordeste</a></li>
-                <li><a class="dropdown-item" href="Salgados/salgados-norte.html">Norte</a></li>
+                <li><a class="dropdown-item" href="../Salgados/salgados-sul.html">Sul</a></li>
+                <li><a class="dropdown-item" href="../Salgados/salgados-sudeste.html">Sudeste</a></li>
+                <li><a class="dropdown-item" href="../Salgados/salgados-centro-oeste.html">Centro-Oeste</a></li>
+                <li><a class="dropdown-item" href="../Salgados/salgados-nordeste.html">Nordeste</a></li>
+                <li><a class="dropdown-item" href="../Salgados/salgados-norte.html">Norte</a></li>
 
                 <li>
                   <hr class="dropdown-divider border-warning">
@@ -70,19 +70,19 @@
             </li>
 
             <li class="nav-item mx-auto">
-              <a class="navbar-brand" href="index.html">
-            <a class="navbar-brand mx-4" href="index.html"> <!--Logo navbar-->
-              <img src="img/logo.png" alt="Cantinho" width="95" height="95">
+              <a class="navbar-brand" href="../index.html">
+            <a class="navbar-brand mx-4" href="../index.html"> <!--Logo navbar-->
+              <img src="../img/logo.png" alt="Cantinho" width="95" height="95">
           </a>
 
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Bebidas</a>
               <ul class="dropdown-menu border-warning">
-                <li><a class="dropdown-item" href="Bebidas/bebidas-sul.html">Sul</a></li>
-                <li><a class="dropdown-item" href="Bebidas/bebidas-sudeste.html">Sudeste</a></li>
-                <li><a class="dropdown-item" href="Bebidas/bebidas-centro-oeste.html">Centro-Oeste</a></li>
-                <li><a class="dropdown-item" href="Bebidas/bebidas-nordeste.html">Nordeste</a></li>
-                <li><a class="dropdown-item" href="Bebidas/bebidas-norte.html">Norte</a></li>
+                <li><a class="dropdown-item" href="../Bebidas/bebidas-sul.html">Sul</a></li>
+                <li><a class="dropdown-item" href="../Bebidas/bebidas-sudeste.html">Sudeste</a></li>
+                <li><a class="dropdown-item" href="../Bebidas/bebidas-centro-oeste.html">Centro-Oeste</a></li>
+                <li><a class="dropdown-item" href="../Bebidas/bebidas-nordeste.html">Nordeste</a></li>
+                <li><a class="dropdown-item" href="../Bebidas/bebidas-norte.html">Norte</a></li>
 
                 <li>
                   <hr class="dropdown-divider border-warning">
@@ -94,11 +94,11 @@
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Carnes</a>
               <ul class="dropdown-menu border-warning">
-                <li><a class="dropdown-item" href="Carnes/carnes-sul.html">Sul</a></li>
-                <li><a class="dropdown-item" href="Carnes/carnes-sudeste.html">Sudeste</a></li>
-                <li><a class="dropdown-item" href="Carnes/carnes-centro-oeste.html">Centro-Oeste</a></li>
-                <li><a class="dropdown-item" href="Carnes/carnes-nordeste.html">Nordeste</a></li>
-                <li><a class="dropdown-item" href="Carnes/carnes-norte.html">Norte</a></li>
+                <li><a class="dropdown-item" href="../Carnes/carnes-sul.html">Sul</a></li>
+                <li><a class="dropdown-item" href="../Carnes/carnes-sudeste.html">Sudeste</a></li>
+                <li><a class="dropdown-item" href="../Carnes/carnes-centro-oeste.html">Centro-Oeste</a></li>
+                <li><a class="dropdown-item" href="../Carnes/carnes-nordeste.html">Nordeste</a></li>
+                <li><a class="dropdown-item" href="../Carnes/carnes-norte.html">Norte</a></li>
 
                 <li>
                   <hr class="dropdown-divider border-warning">
@@ -110,11 +110,11 @@
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Saladas e molhos</a>
               <ul class="dropdown-menu border-warning">
-                <li><a class="dropdown-item" href="Sal-Mol/s.m-sul.html">Sul</a></li>
-                <li><a class="dropdown-item" href="Sal-Mol/s.m-sudeste.html">Sudeste</a></li>
-                <li><a class="dropdown-item" href="Sal-Mol/s.m-centro-oeste.html">Centro-Oeste</a></li>
-                <li><a class="dropdown-item" href="Sal-Mol/s.m-nordeste.html">Nordeste</a></li>
-                <li><a class="dropdown-item" href="Sal-Mol/s.m-norte.html">Norte</a></li>
+                <li><a class="dropdown-item" href="../Sal-Mol/s.m-sul.html">Sul</a></li>
+                <li><a class="dropdown-item" href="../Sal-Mol/s.m-sudeste.html">Sudeste</a></li>
+                <li><a class="dropdown-item" href="../Sal-Mol/s.m-centro-oeste.html">Centro-Oeste</a></li>
+                <li><a class="dropdown-item" href="../Sal-Mol/s.m-nordeste.html">Nordeste</a></li>
+                <li><a class="dropdown-item" href="../Sal-Mol/s.m-norte.html">Norte</a></li>
 
                 <li>
                   <hr class="dropdown-divider border-warning">
@@ -126,25 +126,25 @@
         
         <!-- Logo como um botão simples (BUGADO) -->
       <li class="nav-item ms-3">
-        <a class="nav-link p-0" href="quemsomos.html">
-          <img src="img/receitas.fav.png" alt="Livro de Receitas" width="50" height="50" class="d-block">
+        <a class="nav-link p-0" href="../quemsomos.html">
+          <img src="../img/receitas.fav.png" alt="Livro de Receitas" width="50" height="50" class="d-block">
         </a>
       </li>
 
       </div>
     </nav>
-  </header>
-  <main>
+    </header>
+    <main>
 
-  </main>
-  <footer>
-    <p>© Cantinho BRasileiro 2024</p>
-  </footer>
+    </main>
+    <footer>
+        <p>© Cantinho BRasileiro 2024</p>
+    </footer>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 
