--- a/Carnes/carnes-norte.html
+++ b/Carnes/carnes-norte.html
@@ -135,6 +135,73 @@
     </nav>
     </header>
     <main>
+      <div class="container text-center">
+        <h3 class="receita">Tambaqui na Brasa</h3>
+        <p></p>
+        <img src="..img/Tambaqui-na-Brasa-.jpeg" alt="..." width="1000" height="700">
+        </br>
+        </br>
+
+
+
+    </div>
+    <div class="container">
+        <p></p>
+        <h4>Ingredientes:</h4>
+        <p>1 kg de tambaqui inteiro</p>
+        <p>1 cebola picada</p>
+        <p>2 dentes de alho pícados</p>
+        <p>Suco de 2 limões</p>
+        <p>1 pimentão verde picado</p>
+        <p>Azeite de oliva a gosto</p>
+        <p>Sal e pimenta a gosto</p>
+        <p>Ramos de alecrim</p>
+
+        <h3>Modo de Preparo:</h3>
+        <p></p>
+        
+        <p>Tempere o peixe com suco de limão, sal, pimenta, alho, cebola e pimentão.</p>
+        <p> Deixe o peixe marinando por cerca de 30 minutos.</p>
+        <p> Coloque o peixe na grelha e asse por cerca de 20 a 30 minutos, regando com azeite e virando para dourar de todos os lados.</p>
+        <p>Sirva com arroz branco e farofa.</p>
+        </br>
+        </br>
+        </br>
+        </br>
+
+    </div>
+
+    <div class="container text-center">
+        <h3 class="receita">Feijão Tropeiro com Linguiça e Carne Seca</h3>
+        <img src="img/Feijão-tropeiro-com-linguiça-e-carne-seca.jpg" alt="..." width="1000" height="700">
+        </br>
+        </br>
+
+    </div>
+    <div class="container">
+        <p></p>
+        <h4>Ingredientes: </h4>
+
+        <p> 300 g de carne seca dessalgada e desfiada</p>
+        <p>2 linguiças calabresas cortadas em rodelas</p>
+        <p>2 xícaras de feijão tropeiro cozido</p>
+        <p>1 cebola picada</p>
+        <p>3 dentes de alho picados</p>
+        <p>1/2 xícara de bacon picado</p>
+        <p>2 colheres de sopa de manteiga de garrafa</p>
+        <p>Farinha de mandioca a gosto</p>
+        <p>Sal e pimenta a gosto</p>
+
+        <h3>Modo de Preparo:</h3>
+        <p></p>
+
+        <p> Refogue a carne seca desfiada, as linguiças, o bacon, a cebola e o alho na manteiga até dourar.</p>
+        <p>Adicione o feijão tropeiro cozido e misture bem.</p>
+        <p>Acrescente farinha de mandioca a gosto e misture até que o feijão fique bem soltinho.</p>
+        <p>Sirva quente, com arroz branco e salada. </p>
+
+
+    </div>
 
     </main>
     <footer>
