alterando e adicionado receitas de carnes

--- a/Carnes/carnes-sul.html
+++ b/Carnes/carnes-sul.html
@@ -2,25 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cantinho BRasileiro - carnes do Sul</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cantinho BRasileiro - carnes do Sul</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="../style.css">
 
-    <!-- Link para Font Awesome (CDN) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMWx/w17N1yFCO7xzBf6VobH6lcxXoY8s+g8V4R" crossorigin="anonymous">
+  <!-- Link para Font Awesome (CDN) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMWx/w17N1yFCO7xzBf6VobH6lcxXoY8s+g8V4R" crossorigin="anonymous">
 
-    <!--Bootstrap Icons-->
-    <link rel="icon" href="..img/favicon.ico" type="image/x-icon">
+  <!--Bootstrap Icons-->
+  <link rel="icon" href="..img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
 
-    <header>
-        <!--NAVBAR-->
+  <header>
+    <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg border-bottom border-warning">
       <div class="container">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -71,9 +71,9 @@
 
             <li class="nav-item mx-auto">
               <a class="navbar-brand" href="../index.html">
-            <a class="navbar-brand mx-4" href="../index.html"> <!--Logo navbar-->
-              <img src="../img/logo.png" alt="Cantinho" width="95" height="95">
-          </a>
+                <a class="navbar-brand mx-4" href="../index.html"> <!--Logo navbar-->
+                  <img src="../img/logo.png" alt="Cantinho" width="95" height="95">
+                </a>
 
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Bebidas</a>
@@ -123,28 +123,93 @@
               </ul>
             </li>
           </ul>
-        
-        <!-- Logo como um botão simples (BUGADO) -->
-      <li class="nav-item ms-3">
-        <a class="nav-link p-0" href="../quemsomos.html">
-          <img src="../img/receitas.fav.png" alt="Livro de Receitas" width="50" height="50" class="d-block">
-        </a>
-      </li>
 
-      </div>
+          <!-- Logo como um botão simples (BUGADO) -->
+          <li class="nav-item ms-3">
+            <a class="nav-link p-0" href="../quemsomos.html">
+              <img src="../img/receitas.fav.png" alt="Livro de Receitas" width="50" height="50" class="d-block">
+            </a>
+          </li>
+
+        </div>
     </nav>
-    </header>
-    <main>
+  </header>
+  </br>
+  <div class="container text-center">
+    <h3 class="receita">Churrasco Gaúcho</h3>
+    </br>
+    <img src="../img/churrasco-gaucho.jpg" alt="..." width="1000" height="700">
+    </br>
+    </br>
 
-    </main>
-    <footer>
-        <p>© Cantinho BRasileiro 2024</p>
-    </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+  </div>
+  <div class="container">
+    <p></p>
+    <h4>Ingredientes:</h4>
+    <p>1 peça de costela de boi (aproximadamente 1,5 kg)</p>
+    <p>Sal grosso a gosto</p>
+    <p>1 ramo de alecrim</p>
+    <p>Azeite de oliva</p>
+
+    <h4>Modo de Preparo:</h4>
+    <p></p>
+
+    <p>Tempere a costela com sal grosso e coloque um ramo de alecrim sobre a carne.</p>
+    <p> Asse a costela lentamente na churrasqueira por cerca de 3 a 4 horas, virando de vez em quando para dourar.</p>
+    <p> Sirva com arroz, farofa e vinagrete.</p>
+
+    </br>
+    </br>
+    </br>
+    </br>
+
+  </div>
+
+  <div class="container text-center">
+    <h3 class="receita">Pork Belly (Barriga de Porco Assada)</h3>
+    <img src="../img/barrig-de-porco-Assada-com-Batata-.jpg" alt="..." width="1000" height="700">
+    </br>
+    </br>
+
+  </div>
+  <div class="container">
+    <p></p>
+    <h4>Ingredientes: </h4>
+
+    <p>1 kg de barriga de porco</p>
+    <p>4 dentes de alho picados</p>
+    <p>1 colher de sopa de azeite de oliva</p>
+    <p>1 ramo de alecrim</p>
+    <p>Sal e pimenta-do-reino a gosto</p>
+
+    </br>
+
+    <h4>Modo de Preparo:</h4>
+    <p></p>
+
+    <p>Tempere a barriga de porco com alho, azeite, sal e pimenta. </p>
+    <p>Deixe marinar por pelo menos 1 hora.</p>
+    <p>Coloque a barriga de porco em uma assadeira, regue com azeite e asse em forno preaquecido a 180°C por cerca de
+      2
+      horas.</p>
+    <p>Sirva com arroz, salada de batata e farofa.</p>
+
+
+  </div>
+
+  </main>
+  <footer>
+    <div class="container text-center">
+      <p>© Cantinho BRasileiro 2024</p>
+    </div>
+  </footer>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
 
 
