--- a/Carnes/carnes-centro-oeste.html
+++ b/Carnes/carnes-centro-oeste.html
@@ -2,25 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cantinho BRasileiro - carnes do Centro-Oeste</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cantinho BRasileiro - carnes do Centro-Oeste</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="../style.css">
 
-    <!-- Link para Font Awesome (CDN) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMWx/w17N1yFCO7xzBf6VobH6lcxXoY8s+g8V4R" crossorigin="anonymous">
+  <!-- Link para Font Awesome (CDN) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMWx/w17N1yFCO7xzBf6VobH6lcxXoY8s+g8V4R" crossorigin="anonymous">
 
-    <!--Bootstrap Icons-->
-    <link rel="icon" href="..img/favicon.ico" type="image/x-icon">
+  <!--Bootstrap Icons-->
+  <link rel="icon" href="..img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
 
-    <header>
-        <!--NAVBAR-->
+  <header>
+    <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg border-bottom border-warning">
       <div class="container">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -71,9 +71,9 @@
 
             <li class="nav-item mx-auto">
               <a class="navbar-brand" href="../index.html">
-            <a class="navbar-brand mx-4" href="../index.html"> <!--Logo navbar-->
-              <img src="../img/logo.png" alt="Cantinho" width="95" height="95">
-          </a>
+                <a class="navbar-brand mx-4" href="../index.html"> <!--Logo navbar-->
+                  <img src="../img/logo.png" alt="Cantinho" width="95" height="95">
+                </a>
 
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Bebidas</a>
@@ -123,82 +123,84 @@
               </ul>
             </li>
           </ul>
-        
-        <!-- Logo como um botão simples (BUGADO) -->
-      <li class="nav-item ms-3">
-        <a class="nav-link p-0" href="../quemsomos.html">
-          <img src="../img/receitas.fav.png" alt="Livro de Receitas" width="50" height="50" class="d-block">
-        </a>
-      </li>
 
-      </div>
+          <!-- Logo como um botão simples (BUGADO) -->
+          <li class="nav-item ms-3">
+            <a class="nav-link p-0" href="../quemsomos.html">
+              <img src="../img/receitas.fav.png" alt="Livro de Receitas" width="50" height="50" class="d-block">
+            </a>
+          </li>
+
+        </div>
     </nav>
-    </header>
-    
-    <main>
-        <div class="container text-center">
-            <h3 class="receita">Maminha com Molho de Goiaba</h3>
-            <p></p>
-            <img src="../img/maminha-com-molho-de-goiaba.webp" alt="..." width="1000" height="700">
+  </header>
 
-        </div>
-        <div class="container">
-            <p></p>
-            <h4>Ingredientes:</h4>
-            <p>1 maminha (1 kg)</p>
-            <p>200 g de goiabada</p>
-            <p>1/2 xícara de suco de laranja</p>
-            <p>1 colher de sopa de manteiga</p>
-            <p>2 dentes de alho picados</p>
-            <p>sal e pimenta a gosto</p>
-            <p></p>
-            <h3>Modo de Preparo:</h3>
-            <p></p>
-            <p>Tempere a maminha com sal, pimenta e alho picado. Deixe marinar por 30 minutos.</p>
-            <p>Em uma frigideira, derreta a manteiga e sele a maminha de todos os lados até dourar. </p>
-            <p>Em uma panela, derreta a goiabada com o suco de laranja até formar um molho espesso.</p>
-            <p>Sirva a maminha fatiada com o molho de goiaba por cima.</p>
-            </br>
-            </br>
-            </br>
-            </br>
+  <main>
+    </br>
+    <div class="container text-center">
+      <h3 class="receita">Maminha com Molho de Goiaba</h3>
+      </br>
+      <img src="../img/maminha-com-molho-de-goiaba.webp" alt="..." width="1000" height="700">
 
-        </div>
+    </div>
+    <div class="container">
+      <p></p>
+      <h4>Ingredientes:</h4>
+      <p>1 maminha (1 kg)</p>
+      <p>200 g de goiabada</p>
+      <p>1/2 xícara de suco de laranja</p>
+      <p>1 colher de sopa de manteiga</p>
+      <p>2 dentes de alho picados</p>
+      <p>sal e pimenta a gosto</p>
+      <p></p>
 
-        <div class="container text-center">
-            <h3 class="receita">Churrasco Pantaneiro</h3>
-            <p></p>
-            <img src="../img/Churrasco-Pantaneiro.jpg" alt="..." width="1000" height="700">
+      <h4>Modo de Preparo:</h4>
+      <p></p>
+      <p>Tempere a maminha com sal, pimenta e alho picado. Deixe marinar por 30 minutos.</p>
+      <p>Em uma frigideira, derreta a manteiga e sele a maminha de todos os lados até dourar. </p>
+      <p>Em uma panela, derreta a goiabada com o suco de laranja até formar um molho espesso.</p>
+      <p>Sirva a maminha fatiada com o molho de goiaba por cima.</p>
+      </br>
+      </br>
+      </br>
+      </br>
 
-        </div>
-        <div class="container">
-            <p></p>
-            <h4>Ingredientes:</h4>
-            <p>1 picanha inteira (aproximadamente 1 kg)</p>
-            <p>Sal grosso a gosto</p>
-            <p>2 dentes de alho picados</p>
-            <p>1 ramo de alecrim (opcional)</p>
-            <p></p>
+    </div>
 
-            <h3>Modo de Preparo:</h3>
-            <p></p>
-            <p>Tempere a picanha com sal grosso e alho picado. Se desejar, adicione o alecrim.</p>
-            <p>Coloque a picanha na churrasqueira, com a gordura virada para cima.</p>
-            <p>Asse a carne por 20 a 30 minutos, virando-a ocasionalmente até atingir o ponto desejado.</p>
-            <p>Sirva com arroz, vinagrete e farofa.</p>
+    <div class="container text-center">
+      <h3 class="receita">Churrasco Pantaneiro</h3>
+      <p></p>
+      <img src="../img/Churrasco-Pantaneiro.jpg" alt="..." width="1000" height="700">
 
+    </div>
+    <div class="container">
+      <p></p>
+      <h4>Ingredientes:</h4>
+      <p>1 picanha inteira (aproximadamente 1 kg)</p>
+      <p>Sal grosso a gosto</p>
+      <p>2 dentes de alho picados</p>
+      <p>1 ramo de alecrim (opcional)</p>
+      <p></p>
 
-        </div>
-    </main>
-  </body>
-    <footer>
-        <div class="container text-center">
-            <p>© Cantinho BRasileiro 2024</p>
-        </div>
-    </footer>
+      <h4>Modo de Preparo:</h4>
+      <p></p>
+      <p>Tempere a picanha com sal grosso e alho picado. Se desejar, adicione o alecrim.</p>
+      <p>Coloque a picanha na churrasqueira, com a gordura virada para cima.</p>
+      <p>Asse a carne por 20 a 30 minutos, virando-a ocasionalmente até atingir o ponto desejado.</p>
+      <p>Sirva com arroz, vinagrete e farofa.</p>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    </div>
+  </main>
+</body>
+<footer>
+  <div class="container text-center">
+    <p>© Cantinho BRasileiro 2024</p>
+  </div>
+</footer>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </html>
