--- a/Carnes/carnes-nordeste.html
+++ b/Carnes/carnes-nordeste.html
@@ -2,25 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cantinho BRasileiro - carnes do Nordeste</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cantinho BRasileiro - carnes do Nordeste</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="../style.css">
 
-    <!-- Link para Font Awesome (CDN) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMWx/w17N1yFCO7xzBf6VobH6lcxXoY8s+g8V4R" crossorigin="anonymous">
+  <!-- Link para Font Awesome (CDN) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMWx/w17N1yFCO7xzBf6VobH6lcxXoY8s+g8V4R" crossorigin="anonymous">
 
-    <!--Bootstrap Icons-->
-    <link rel="icon" href="..img/favicon.ico" type="image/x-icon">
+  <!--Bootstrap Icons-->
+  <link rel="icon" href="..img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
 
-    <header>
-        <!--NAVBAR-->
+  <header>
+    <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg border-bottom border-warning">
       <div class="container">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -71,9 +71,9 @@
 
             <li class="nav-item mx-auto">
               <a class="navbar-brand" href="../index.html">
-            <a class="navbar-brand mx-4" href="../index.html"> <!--Logo navbar-->
-              <img src="../img/logo.png" alt="Cantinho" width="95" height="95">
-          </a>
+                <a class="navbar-brand mx-4" href="../index.html"> <!--Logo navbar-->
+                  <img src="../img/logo.png" alt="Cantinho" width="95" height="95">
+                </a>
 
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Bebidas</a>
@@ -123,96 +123,97 @@
               </ul>
             </li>
           </ul>
-        
-        <!-- Logo como um botão simples (BUGADO) -->
-      <li class="nav-item ms-3">
-        <a class="nav-link p-0" href="../quemsomos.html">
-          <img src="../img/receitas.fav.png" alt="Livro de Receitas" width="50" height="50" class="d-block">
-        </a>
-      </li>
 
-      </div>
+          <!-- Logo como um botão simples (BUGADO) -->
+          <li class="nav-item ms-3">
+            <a class="nav-link p-0" href="../quemsomos.html">
+              <img src="../img/receitas.fav.png" alt="Livro de Receitas" width="50" height="50" class="d-block">
+            </a>
+          </li>
+
+        </div>
     </nav>
-    </header>
-    <main>
-        <div class="container text-center">
-            <h3 class="receita">Bode Grelhado</h3>
-            <p></p>
-            <img src="img/bode-grelhado.jpg" alt="..." width="1000" height="700">
-            </br>
-            </br>
+  </header>
+  <main>
+    </br>
+    <div class="container text-center">
+      <h3 class="receita">Bode Grelhado</h3>
+      </br>
+      <img src="../img/bode-grelhado.jpg" alt="..." width="1000" height="700">
+      </br>
+      </br>
 
 
 
-        </div>
-        <div class="container">
-            <p></p>
-            <h4>Ingredientes:</h4>
-            <p>1 kg de carne de bode em pedaços</p>
-            <p>3 dentes de alho picados</p>
-            <p>Suco de 2 limões</p>
-            <p>1 pimentão verde picado</p>
-            <p>1/2 xícara de azeite de oliva</p>
-            <p>Sal, pimenta-do-reino e cominho a gosto</p>
-            <p></p>
-            <h3>Modo de Preparo:</h3>
-            <p></p>
-            <p>Tempere a carne de bode com alho, suco de limão, pimentão, azeite, sal, pimenta e cominho.</p>
-            <p> Deixe marinar por pelo menos 2 horas. </p>
-            <p> Grelhe a carne em uma churrasqueira ou frigideira até dourar de todos os lados.</p>
-            <p>Sirva com arroz e feijão verde.</p>
-            </br>
-            </br>
-            </br>
-            </br>
+    </div>
+    <div class="container">
+      <p></p>
+      <h4>Ingredientes:</h4>
+      <p>1 kg de carne de bode em pedaços</p>
+      <p>3 dentes de alho picados</p>
+      <p>Suco de 2 limões</p>
+      <p>1 pimentão verde picado</p>
+      <p>1/2 xícara de azeite de oliva</p>
+      <p>Sal, pimenta-do-reino e cominho a gosto</p>
+      <p></p>
+      <h4>Modo de Preparo:</h4>
+      <p></p>
+      <p>Tempere a carne de bode com alho, suco de limão, pimentão, azeite, sal, pimenta e cominho.</p>
+      <p> Deixe marinar por pelo menos 2 horas. </p>
+      <p> Grelhe a carne em uma churrasqueira ou frigideira até dourar de todos os lados.</p>
+      <p>Sirva com arroz e feijão verde.</p>
+      </br>
+      </br>
+      </br>
+      </br>
 
-        </div>
+    </div>
 
-        <div class="container text-center">
-            <h3 class="receita">Feijão Tropeiro com Linguiça e Carne Seca</h3>
-            <img src="img/Feijão-tropeiro-com-linguiça-e-carne-seca.jpg" alt="..." width="1000" height="700">
-            </br>
-            </br>
+    <div class="container text-center">
+      <h3 class="receita">Feijão Tropeiro com Linguiça e Carne Seca</h3>
+      <img src="../img/Feijão-tropeiro-com-linguiça-e-carne-seca.jpg" alt="..." width="1000" height="700">
+      </br>
+      </br>
 
-        </div>
-        <div class="container">
-            <p></p>
-            <h4>Ingredientes: </h4>
+    </div>
+    <div class="container">
+      <p></p>
+      <h4>Ingredientes: </h4>
 
-            <p> 300 g de carne seca dessalgada e desfiada</p>
-            <p>2 linguiças calabresas cortadas em rodelas</p>
-            <p>2 xícaras de feijão tropeiro cozido</p>
-            <p>1 cebola picada</p>
-            <p>3 dentes de alho picados</p>
-            <p>1/2 xícara de bacon picado</p>
-            <p>2 colheres de sopa de manteiga de garrafa</p>
-            <p>Farinha de mandioca a gosto</p>
-            <p>Sal e pimenta a gosto</p>
+      <p> 300 g de carne seca dessalgada e desfiada</p>
+      <p>2 linguiças calabresas cortadas em rodelas</p>
+      <p>2 xícaras de feijão tropeiro cozido</p>
+      <p>1 cebola picada</p>
+      <p>3 dentes de alho picados</p>
+      <p>1/2 xícara de bacon picado</p>
+      <p>2 colheres de sopa de manteiga de garrafa</p>
+      <p>Farinha de mandioca a gosto</p>
+      <p>Sal e pimenta a gosto</p>
 
-            <h3>Modo de Preparo:</h3>
-            <p></p>
+      <h4>Modo de Preparo:</h4>
+      <p></p>
 
-            <p> Refogue a carne seca desfiada, as linguiças, o bacon, a cebola e o alho na manteiga até dourar.</p>
-            <p>Adicione o feijão tropeiro cozido e misture bem.</p>
-            <p>Acrescente farinha de mandioca a gosto e misture até que o feijão fique bem soltinho.</p>
-            <p>Sirva quente, com arroz branco e salada. </p>
-
-
-        </div>
-
-    </main>
-    <footer>
-        <div class="container text-center">
-            <p>© Cantinho BRasileiro 2024</p>
-        </div>
-    </footer>
+      <p> Refogue a carne seca desfiada, as linguiças, o bacon, a cebola e o alho na manteiga até dourar.</p>
+      <p>Adicione o feijão tropeiro cozido e misture bem.</p>
+      <p>Acrescente farinha de mandioca a gosto e misture até que o feijão fique bem soltinho.</p>
+      <p>Sirva quente, com arroz branco e salada. </p>
 
 
+    </div>
+
+  </main>
+  <footer>
+    <div class="container text-center">
+      <p>© Cantinho BRasileiro 2024</p>
+    </div>
+  </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
 
 
