--- a/Carnes/carnes-sudeste.html
+++ b/Carnes/carnes-sudeste.html
@@ -2,25 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cantinho BRasileiro - Carnes do Sudeste</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cantinho BRasileiro - Carnes do Sudeste</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="../style.css">
 
-    <!-- Link para Font Awesome (CDN) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMWx/w17N1yFCO7xzBf6VobH6lcxXoY8s+g8V4R" crossorigin="anonymous">
+  <!-- Link para Font Awesome (CDN) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMWx/w17N1yFCO7xzBf6VobH6lcxXoY8s+g8V4R" crossorigin="anonymous">
 
-    <!--Bootstrap Icons-->
-    <link rel="icon" href="..img/favicon.ico" type="image/x-icon">
+  <!--Bootstrap Icons-->
+  <link rel="icon" href="..img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
 
-    <header>
-        <!--NAVBAR-->
+  <header>
+    <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg border-bottom border-warning">
       <div class="container">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -71,9 +71,9 @@
 
             <li class="nav-item mx-auto">
               <a class="navbar-brand" href="../index.html">
-            <a class="navbar-brand mx-4" href="../index.html"> <!--Logo navbar-->
-              <img src="../img/logo.png" alt="Cantinho" width="95" height="95">
-          </a>
+                <a class="navbar-brand mx-4" href="../index.html"> <!--Logo navbar-->
+                  <img src="../img/logo.png" alt="Cantinho" width="95" height="95">
+                </a>
 
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Bebidas</a>
@@ -123,28 +123,94 @@
               </ul>
             </li>
           </ul>
-        
-        <!-- Logo como um botão simples (BUGADO) -->
-      <li class="nav-item ms-3">
-        <a class="nav-link p-0" href="../quemsomos.html">
-          <img src="../img/receitas.fav.png" alt="Livro de Receitas" width="50" height="50" class="d-block">
-        </a>
-      </li>
 
-      </div>
+          <!-- Logo como um botão simples (BUGADO) -->
+          <li class="nav-item ms-3">
+            <a class="nav-link p-0" href="../quemsomos.html">
+              <img src="../img/receitas.fav.png" alt="Livro de Receitas" width="50" height="50" class="d-block">
+            </a>
+          </li>
+
+        </div>
     </nav>
-    </header>
-    <main>
+  </header>
+  <main>
+    </br>
+    <div class="container text-center">
+      <h3 class="receita">Costelinha de Porco ao Barbecue</h3>
+      </br>
+      <img src="../img/costela-com-molho-barbecue-.webp" alt="..." width="1000" height="700">
+      </br>
+      </br>
 
-    </main>
-    <footer>
-        <p>© Cantinho BRasileiro 2024</p>
-    </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    </div>
+    <div class="container">
+      <p></p>
+      <h4>Ingredientes:</h4>
+      <p>1 kg de costelinha de porco</p>
+      <p>1/2 xícara de molho barbecue</p>
+      <p>1 colher de sopa de mel</p>
+      <p>2 dentes de alho picados</p>
+      <p>1 colher de sopa de vinagre</p>
+      <p>Sal e pimenta-do-reino a gosto</p>
+
+      <p></p>
+
+      <h4>Modo de Preparo:</h4>
+      <p></p>
+
+      <p>Tempere a costelinha com sal, pimenta, alho e vinagre.</p>
+      <p>Misture o molho barbecue com o mel e pincele sobre a costelinha. </p>
+      <p>Grelhe a costelinha na churrasqueira ou no forno, pincelando mais molho durante o processo.</p>
+      <p>Sirva com arroz, farofa e vinagrete.</p>
+      </br>
+      </br>
+      </br>
+      </br>
+
+    </div>
+
+    <div class="container text-center">
+      <h3 class="receita">Picanha à Brasileira</h3>
+      <img src="../img/picanha-a-brasileira.jpg" alt="..." width="1000" height="700">
+      </br>
+      </br>
+
+    </div>
+    <div class="container">
+      <p></p>
+      <h4>Ingredientes: </h4>
+
+      <p>1 peça de picanha (aproximadamente 1kg).</p>
+      <p>Sal grosso a gosto.</p>
+      <p>1 colher de sopa de manteiga.</p>
+      <p>1 ramo de alecrim.</p>
+
+
+      <h4>Modo de Preparo:</h4>
+      <p></p>
+
+      <p> Tempere a picanha com sal grosso e deixe descansar por 30 minutos</p>
+      <p>Em uma frigideira grande, derreta a manteiga e doure a picanha de todos os lados.</p>
+      <p>Adicione o alecrim e continue cozinhando até o ponto desejado.</p>
+      <p>Sirva com arroz, batatas assadas e salada.</p>
+
+
+    </div>
+
+  </main>
+  <footer>
+    <div class="container text-center">
+      <p>© Cantinho BRasileiro 2024</p>
+    </div>
+  </footer>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
 
 
