--- a/Salgados/salgados-centro-oeste.html
+++ b/Salgados/salgados-centro-oeste.html
@@ -135,31 +135,34 @@
     </nav>
   </header>
   <main>
-</br>
+    </br>
     <div class="container text-center">
-      <h3 class="receita">Maminha com Molho de Goiaba</h3>
+      <h3 class="receita">Pamonha</h3>
       </br>
-      <img src="../img/maminha-com-molho-de-goiaba.webp" alt="..." width="1000" height="700">
+      <img src="../img/pamonha.webp" alt="..." width="1000" height="700">
 
     </div>
     <div class="container">
-      <p></p>
-      <h4>Ingredientes:</h4>
       </br>
+      </br>
+      <h4>Ingredientes:</h4>
       <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+      <p>6 espigas de milho verde</p>
+      <p>1 xícara de leite</p>
+      <p>1 colher de sopa de manteiga</p>
+      <p>1/2 xícara de açucar</p>
+      <p>1 pitada de sal</p>
+      <p>6 palhas de milho</p>
       <p></p>
 
       <h4>Modo de Preparo:</h4>
-      </br>
+
       <p></p>
-      <p></p>
-      <p> </p>
-      <p></p>
+
+      <p>Rale as espigas de milho e bata o milho ralado com o leite no liquidificador. </p>
+      <p>Coe a mistura e depois adicione o açúcar, a manteiga e o sal.</p>
+      <p>Enrole a massa nas palhas de milho, amarrando as extremidades. </p>
+      <p>Cozinhe em água fervente por cerca de 40 minutos. Sirva quente</p>
       <p></p>
       </br>
       </br>
@@ -169,25 +172,37 @@
     </div>
 
     <div class="container text-center">
-      <h3 class="receita">Churrasco Pantaneiro</h3>
+      <h3 class="receita">Peixe na Telha</h3>
       <p></p>
-      <img src="../img/Churrasco-Pantaneiro.jpg" alt="..." width="1000" height="700">
+      <img src="../img/Peixe-na-Telha.webp" alt="..." width="1000" height="700">
 
     </div>
     <div class="container">
-      <p></p>
+      </br>
+      </br>
       <h4>Ingredientes:</h4>
+
       <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+
+      <p>1 kg de peixe fresco (tilápia, por exemplo)</p>
+      <p>1 cebola picada</p>
+      <p>2 tomates picados</p>
+      <p>2 dentes de alho picados</p>
+      <p>1 pimentão verde picado</p>
+      <p>2 colheres de sopa e azeite de oliva</p>
+      <p>Sal e pimenta a gosto</p>
+      <p>Ramos de alecrim</p>
+
       <p></p>
 
       <h4>Modo de Preparo:</h4>
+
       <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+
+      <p>Tempere o peixe com sal, pimenta, alho e um pouco de azeite.</p>
+      <p>Em uma telha (ou assadeira), disponha o peixe e cubra com a cebola, tomate, pimentão e alecrim.</p>
+      <p>Regue com o azeite e cubra com papel alumínio.</p>
+      <p>Asse por cerca de 40 minutos em forno médio</p>
       <p></p>
 
 
@@ -207,4 +222,3 @@
 
 
 </html>
-    
