--- a/Salgados/salgados-nordeste.html
+++ b/Salgados/salgados-nordeste.html
@@ -32,7 +32,7 @@
 
             <li class="nav-item">
               <div class="container">
-                <a class="nav-link nav-hover h6 text-dark" href="quemsomos.html">Quem somos</a>
+                <a class="nav-link nav-hover h6 text-dark" href="../quemsomos.html">Quem somos</a>
               </div>
             </li>
 
@@ -138,29 +138,29 @@
 
     </br>
     <div class="container text-center">
-      <h3 class="receita">Maminha com Molho de Goiaba</h3>
+      <h3 class="receita">Acarajé</h3>
       </br>
-      <img src="../img/maminha-com-molho-de-goiaba.webp" alt="..." width="1000" height="700">
+      <img src="../img/acaraje.webp" alt="..." width="1000" height="700">
 
     </div>
     <div class="container">
       <p></p>
       <h4>Ingredientes:</h4>
       </br>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+      <p>500 g de feijão fradinho</p>
+      <p>1 cebola média</p>
+      <p>Sal a gosto</p>
+      <p>Azeite dedandê para fritar</p>
       <p></p>
       <p></p>
       <p></p>
 
       <h4>Modo de Preparo:</h4>
       </br>
-      <p></p>
-      <p></p>
-      <p> </p>
-      <p></p>
+      <p>Deixe o feijão de molho por 12 horas e retire as cascas, esfregando os grãos.</p>
+      <p>Bata o feijão com a cebola no processador até formar uma massa. Adicione o sal.</p>
+      <p>Modele pequenas bolinhas e frite-as em azeite de dandê bem quente até ficarem douradas </p>
+      <p>Sirva com vatapá e camarão seco, se desejar.</p>
       <p></p>
       </br>
       </br>
@@ -170,25 +170,29 @@
     </div>
 
     <div class="container text-center">
-      <h3 class="receita">Churrasco Pantaneiro</h3>
+      <h3 class="receita">Escondidinho de Carne de Sol</h3>
       <p></p>
-      <img src="../img/Churrasco-Pantaneiro.jpg" alt="..." width="1000" height="700">
+      <img src="../img/escondidinho-de-carne-de-sol-.jpg" alt="..." width="1000" height="700">
 
     </div>
     <div class="container">
       <p></p>
       <h4>Ingredientes:</h4>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+      <p>500 g de carne de sol</p>
+      <p>1 kg de mandioca cozida</p>
+      <p>200 g de requeijão cremoso </p>
+      <p> 100 g de queijo coalho ralado</p>
+      <p>1 cebola picada</p>
+      <p>2 dentes de alho picados </p>
+      <p>manteiga para untar</p>
+      <p>Sal e pimenta a gosto</p>
+
 
       <h4>Modo de Preparo:</h4>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+      <p>Cozinhe a carne de sol até ficar macia e desfie.</p>
+      <p>Cozinhe a mandioca, amasse e misture com o requeijão, o queijo coalho e sal a gosto.</p>
+      <p>Refogue a cebola e o alho, depois adicione a carne desfiada e misture bem.</p>
+      <p>Em um refratário untado, faça uma camada de purê de mandioca , adicione a carne refogada e cubra com o restante do purê.</p>
       <p></p>
 
 
