--- a/Salgados/salgados-norte.html
+++ b/Salgados/salgados-norte.html
@@ -138,29 +138,29 @@
 
     </br>
     <div class="container text-center">
-      <h3 class="receita">Maminha com Molho de Goiaba</h3>
+      <h3 class="receita">Tacacá</h3>
       </br>
-      <img src="../img/maminha-com-molho-de-goiaba.webp" alt="..." width="1000" height="700">
+      <img src="../img/tacaca.jpg" alt="..." width="1000" height="700">
 
     </div>
     <div class="container">
       <p></p>
       <h4>Ingredientes:</h4>
       </br>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+      <p>500 g de camarão seco</p>
+      <p>1 litro de caldo de peixe</p>
+      <p>1/2 xícara de tucupi</p>
+      <p>1/4 de xícara de jambu</p>
+      <p>2 dentes de alho picados</p>
+      <p>2 folhas de louro</p>
+      <p>1 pimentão verde picado</p>
 
       <h4>Modo de Preparo:</h4>
       </br>
-      <p></p>
-      <p></p>
-      <p> </p>
-      <p></p>
+      <p>Cozinhe o camarão seco em água e reserve.</p>
+      <p>Em uma panela, coloque o tucupi, o caldo de peixe, o jambu, o alho e o pimentão, leve ao fogo por cerca de 15 minutos.</p>
+      <p>Adicione o camarão seco e as folhas de louro. Cozinhe por mais 5 minutos. </p>
+      <p>Sirva o tacacá quente, geralmente em cuias, acompanhado de farinha de mandioca.</p>
       <p></p>
       </br>
       </br>
@@ -170,26 +170,31 @@
     </div>
 
     <div class="container text-center">
-      <h3 class="receita">Churrasco Pantaneiro</h3>
+      <h3 class="receita">Baião de Dois</h3>
       <p></p>
-      <img src="../img/Churrasco-Pantaneiro.jpg" alt="..." width="1000" height="700">
+      <img src="../img/bião-de-dois.jpg" alt="..." width="1000" height="700">
 
     </div>
     <div class="container">
       <p></p>
       <h4>Ingredientes:</h4>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+      <p>2 xícaras de arroz</p>
+      <p>1 xícara de feijão verde</p>
+      <p>200 g de carne de sol desfiada</p>
+      <p>1/2 cebola picada</p>
+      <p>2 dentes de alho picados</p>
+      <p>1/2 pimentão picado</p>
+      <p>100 g de queijo coalho picado</p>
+      <p>1 colher de sopa de manteiga</p>
+      <p>Sal e pimenta a gosto</p>
 
       <h4>Modo de Preparo:</h4>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+      <p>Cozinhe o feijão verde e reserve.</p>
+      <p>Em uma panela grande, frite a cebola e o alho na manteiga até dourarem.</p>
+      <p>Adicione a carne de sol desfiada e o pimentão, mexendo por alguns minutos.</p>
+      <p>Acrescente o arroz e o feijão cozido, misture bem e adicione um pouco de água.</p>
+      <p>Cozinhe até o arroz estar prionto. Finalize com o queijo coalho e sirva.</p>
+      <p>Leve ao forno por 20 minutos para dourar.</p>
 
 
     </div>
