--- a/quemsomos.html
+++ b/quemsomos.html
@@ -139,7 +139,7 @@
 
   <main>
     <div class="text-center">
-      <img src="img/imgquemsomos.jfif" class="rounded" alt="..." width="1000" height="700">
+      <img src="../img/img-quem-somos.jpg" class="rounded" alt="..." width="1000" height="700">
     </div>
     <div class="text-center">
       <p>
