--- a/Doces/doces-norte.html
+++ b/Doces/doces-norte.html
@@ -134,12 +134,78 @@
       </div>
     </nav>
     </header>
-    <main>
+  </br>
+  <div class="container text-center">
+    <h3 class="receita"></h3>
+    </br>
+    <img src="../img/" alt="..." width="1000" height="700">
+    </br>
+    </br>
 
-    </main>
-    <footer>
-        <p>© Cantinho BRasileiro 2024</p>
-    </footer>
+
+
+  </div>
+  <div class="container">
+    <p></p>
+    <h4>Ingredientes:</h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+
+    <p></p>
+
+    <h4>Modo de Preparo:</h4>
+    <p></p>
+
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    </br>
+    </br>
+    </br>
+    </br>
+
+  </div>
+
+  <div class="container text-center">
+    <h3 class="receita"></h3>
+    <img src="../img/" alt="..." width="1000" height="700">
+    </br>
+    </br>
+
+  </div>
+  <div class="container">
+    <p></p>
+    <h4>Ingredientes: </h4>
+
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+
+
+    <h4>Modo de Preparo:</h4>
+    <p></p>
+
+    <p> </p>
+    <p></p>
+    <p></p>
+    <p></p>
+
+
+  </div>
+
+</main>
+<footer>
+  <div class="container text-center">
+    <p>© Cantinho BRasileiro 2024</p>
+  </div>
+</footer>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
