--- a/Salgados/salgados-sudeste.html
+++ b/Salgados/salgados-sudeste.html
@@ -2,25 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cantinho BRasileiro - Salgados do Sudeste</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cantinho BRasileiro - Salgados do Sudeste</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="../style.css">
 
-    <!-- Link para Font Awesome (CDN) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMWx/w17N1yFCO7xzBf6VobH6lcxXoY8s+g8V4R" crossorigin="anonymous">
+  <!-- Link para Font Awesome (CDN) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMWx/w17N1yFCO7xzBf6VobH6lcxXoY8s+g8V4R" crossorigin="anonymous">
 
-    <!--Bootstrap Icons-->
-    <link rel="icon" href="..img/favicon.ico" type="image/x-icon">
+  <!--Bootstrap Icons-->
+  <link rel="icon" href="..img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
 
-    <header>
-        <!--NAVBAR-->
+  <header>
+    <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg border-bottom border-warning">
       <div class="container">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -71,9 +71,9 @@
 
             <li class="nav-item mx-auto">
               <a class="navbar-brand" href="../index.html">
-            <a class="navbar-brand mx-4" href="../index.html"> <!--Logo navbar-->
-              <img src="../img/logo.png" alt="Cantinho" width="95" height="95">
-          </a>
+                <a class="navbar-brand mx-4" href="../index.html"> <!--Logo navbar-->
+                  <img src="../img/logo.png" alt="Cantinho" width="95" height="95">
+                </a>
 
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Bebidas</a>
@@ -123,44 +123,44 @@
               </ul>
             </li>
           </ul>
-        
-        <!-- Logo como um botão simples (BUGADO) -->
-      <li class="nav-item ms-3">
-        <a class="nav-link p-0" href="../quemsomos.html">
-          <img src="../img/receitas.fav.png" alt="Livro de Receitas" width="50" height="50" class="d-block">
-        </a>
-      </li>
 
-      </div>
+          <!-- Logo como um botão simples (BUGADO) -->
+          <li class="nav-item ms-3">
+            <a class="nav-link p-0" href="../quemsomos.html">
+              <img src="../img/receitas.fav.png" alt="Livro de Receitas" width="50" height="50" class="d-block">
+            </a>
+          </li>
+
+        </div>
     </nav>
-    </header>
-    <main>
+  </header>
+  <main>
 
     </br>
     <div class="container text-center">
-      <h3 class="receita">Maminha com Molho de Goiaba</h3>
+      <h3 class="receita">Coxinha</h3>
       </br>
-      <img src="../img/maminha-com-molho-de-goiaba.webp" alt="..." width="1000" height="700">
+      <img src="../img/coxinha.jpg" alt="..." width="1000" height="700">
 
     </div>
     <div class="container">
-      <p></p>
-      <h4>Ingredientes:</h4>
       </br>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+      </br>
+      <h4>Ingredientes:</h4>
+      <p>500 g de peito de frango desfiado</p>
+      <p>2 xícaras de caldo de galinha </p>
+      <p>2 xícaras de farinha de trigo</p>
+      <p>1 colher de sopa de manteiga</p>
+      <p>1/2 xícara de leite</p>
+      <p>Sal e pimenta a gosto</p>
+      <p>Óleo para fritar</p>
 
       <h4>Modo de Preparo:</h4>
       </br>
-      <p></p>
-      <p></p>
-      <p> </p>
-      <p></p>
+      <p>Cozinhe o frango e desfie. Refogue o frango com cebola e temperos a gosto.</p>
+      <p>Em uma panela, faça um caldo com o leite, manteiga e caldo de galinha.</p>
+      <p>Adicione a farinha aos poucos, mexendo até formar uma massa. </p>
+      <p>Modele as coxinhas, recheie com o frango e frite em óleo quente até dourar.</p>
       <p></p>
       </br>
       </br>
@@ -170,26 +170,35 @@
     </div>
 
     <div class="container text-center">
-      <h3 class="receita">Churrasco Pantaneiro</h3>
+      <h3 class="receita">Pão de Queijo</h3>
       <p></p>
-      <img src="../img/Churrasco-Pantaneiro.jpg" alt="..." width="1000" height="700">
+      <img src="../img/pao-de-queijo.jpg" alt="..." width="1000" height="700">
+      </br>
+      </br>
 
     </div>
     <div class="container">
       <p></p>
       <h4>Ingredientes:</h4>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+      <p>500 g de polvilho azedo</p>
+      <p>250 g de queijo minas padrão ralado</p>
+      <p>1/2 xícara de leite</p>
+      <p>1/4 xícara de óleo</p>
+      <p>1 ovo</p>
+      <p>Sal a gosto</p>
+
       <p></p>
 
       <h4>Modo de Preparo:</h4>
       <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+
+      <p>Em uma tigela, misture o polvilho, o queijo, o óleo, o leite e o sal. </p>
+      <p>Adicione o ovo e amasse até formar uma massa homogênea. </p>
+      <p>Modele bolinhas e asse em forno pré-aquecido a 180°C por 25 minutos ou até dourar.</p>
+      </br>
+      </br>
+      </br>
+      </br>
 
 
     </div>
@@ -202,9 +211,8 @@
 </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 
