--- a/Salgados/salgados-sul.html
+++ b/Salgados/salgados-sul.html
@@ -2,25 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cantinho BRasileiro - Salgados do Sul</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cantinho BRasileiro - Salgados do Sul</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="../style.css">
 
-    <!-- Link para Font Awesome (CDN) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMWx/w17N1yFCO7xzBf6VobH6lcxXoY8s+g8V4R" crossorigin="anonymous">
+  <!-- Link para Font Awesome (CDN) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMWx/w17N1yFCO7xzBf6VobH6lcxXoY8s+g8V4R" crossorigin="anonymous">
 
-    <!--Bootstrap Icons-->
-    <link rel="icon" href="..img/favicon.ico" type="image/x-icon">
+  <!--Bootstrap Icons-->
+  <link rel="icon" href="..img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
 
-    <header>
-        <!--NAVBAR-->
+  <header>
+    <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg border-bottom border-warning">
       <div class="container">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -71,9 +71,9 @@
 
             <li class="nav-item mx-auto">
               <a class="navbar-brand" href="../index.html">
-            <a class="navbar-brand mx-4" href="../index.html"> <!--Logo navbar-->
-              <img src="../img/logo.png" alt="Cantinho" width="95" height="95">
-          </a>
+                <a class="navbar-brand mx-4" href="../index.html"> <!--Logo navbar-->
+                  <img src="../img/logo.png" alt="Cantinho" width="95" height="95">
+                </a>
 
             <li class="nav-item ms-3 me-3 dropdown">
               <a class="nav-link nav-hover h6 text-dark" href="#" role="button">Bebidas</a>
@@ -123,45 +123,50 @@
               </ul>
             </li>
           </ul>
-        
-        <!-- Logo como um botão simples (BUGADO) -->
-      <li class="nav-item ms-3">
-        <a class="nav-link p-0" href="../quemsomos.html">
-          <img src="../img/receitas.fav.png" alt="Livro de Receitas" width="50" height="50" class="d-block">
-        </a>
-      </li>
 
-      </div>
+          <!-- Logo como um botão simples (BUGADO) -->
+          <li class="nav-item ms-3">
+            <a class="nav-link p-0" href="../quemsomos.html">
+              <img src="../img/receitas.fav.png" alt="Livro de Receitas" width="50" height="50" class="d-block">
+            </a>
+          </li>
+
+        </div>
     </nav>
-    </header>
-    <main>
+  </header>
+  <main>
 
     </br>
     <div class="container text-center">
-      <h3 class="receita">Maminha com Molho de Goiaba</h3>
+      <h3 class="receita">Entrevero de Pinhão</h3>
       </br>
-      <img src="../img/maminha-com-molho-de-goiaba.webp" alt="..." width="1000" height="700">
+      <img src="../img/Entrevero-de-pinhão.jpg" alt="..." width="1000" height="700">
 
     </div>
     <div class="container">
-      <p></p>
-      <h4>Ingredientes:</h4>
       </br>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+      </br>
+      <h4>Ingredientes:</h4>
+      <p>1/2 kg de alcatra, cortada em cubos</p>
+      <p>1/2 kg de linguiça calabresa</p>
+      <p>1/2 kg de pinhão cozido e cortado ao meio</p>
+      <p>8 dentes de alho picados</p>
+      <p>1 pimentão vermelho em cubos</p>
+      <p>salsinha</p>
+      <p>1/2 kg de carne de porco, cortada em cubos</p>
+      <p>100 g de bacon em cubos pequenos </p>
+      <p>2 cebolas picadas</p>
+      <p>1 pimentão verde em cubos</p>
+      <p>Óleo</p>
+      <p>Sal a gosto</p>
 
       <h4>Modo de Preparo:</h4>
       </br>
-      <p></p>
-      <p></p>
-      <p> </p>
-      <p></p>
-      <p></p>
+      <p>Refogar as carnes pouco a pouco. Reservar. Em uma panela, de preferência de ferro, refogar o bacon em um pouco
+        de óleo. Juntar os pimentões e a cebola.</p>
+      <p>Refogar bem. Juntar o alho até dourar. Depois juntar a carne, o pinhão e o tomate. </p>
+      <p>misturar e checar o sal. </p>
+      <p>Clocar por cima um pouco de salsinha e servir com arroz branco.</p>
       </br>
       </br>
       </br>
@@ -170,24 +175,26 @@
     </div>
 
     <div class="container text-center">
-      <h3 class="receita">Churrasco Pantaneiro</h3>
+      <h3 class="receita">Pastel de Carne</h3>
       <p></p>
-      <img src="../img/Churrasco-Pantaneiro.jpg" alt="..." width="1000" height="700">
+      <img src="../img/pastel-de-carne.jpg" alt="..." width="1000" height="700">
 
     </div>
     <div class="container">
-      <p></p>
+      </br>
+      </br>
       <h4>Ingredientes:</h4>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+      <p>500 g de carne moída </p>
+      <p>1 cebola picada</p>
+      <p>2 dentes de alho picados</p>
+      <p>Sal e pimenta a gosto</p>
+      <p>1 pacote de massa de pastel</p>
+      <p>Óleo para fritar</p>
 
       <h4>Modo de Preparo:</h4>
-      <p></p>
-      <p></p>
-      <p></p>
+      <p>Refogue a carne moída com a cebola e o alho. Tempere com sal e pimenta.</p>
+      <p>Modele os pastéis com a massa e recheie com a carne refogada.</p>
+      <p>Frite em óleo quente até ficarem dourados.</p>
       <p></p>
       <p></p>
 
@@ -202,9 +209,8 @@
 </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 
